# Nuke-Tools

./: .deepsource.toml  .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  deepsource.toml  index.d.ts  package-lock.json  package.json  tsconfig.json
demo/: blink_sample.blink  blinkscript_demo.py  code_suggestion.blink  test_import.py
include/pyside2-template/: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
include/pyside2-template/src/: __init__.py  about.py  logger.py  main.py
include/pyside2-template/src/local/: __init__.py  local_app.py  local_nuke.py
include/pyside2-template/src/utils/: __init__.py  color_widgets.py
include/pyside2-template/src/widgets/: __init__.py  about_widget.py  error_dialog.py  toolbar.py
include/pyside2-template/tests/: test_about_widget.py
language/: blinkscript.tmLanguage.json  language-configuration.json  nuke.tmLanguage.json  saturation_sample.blink
resources/language/: blinkscript.tmLanguage.json  blinkscript_completion.json  language-configuration.json  nuke.tmLanguage.json
src/: add_package.ts  assets.ts  client-socket.ts  config.ts  constants.ts  create_project.ts  download_package.ts  extension.ts  fetch_packages.ts  launch-executable.ts  launch_executable.ts  newUpdateMsg.ts  notification.ts  nuke.ts  nuke_interface.ts  nuke_server_socket.ts  packages.ts  packages_fetch.ts  socket-client.ts  socket.ts  stubs.ts  update_message.ts  utils.ts  version.ts
src/nuke/: nodes_tree.ts  (+1 more)
syntaxes/: language-configuration.json
(+368 files in other folders)
