[tool.poetry]
name = "__projectSlug__"
version = "0.1.0"
description = "__projectDescription__}}"
authors = ["author <author@email.com>"]

[tool.poetry.dependencies]
python = "__projectPython__"
PySide2 = "__projectPySide__"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-qt = "*"
pytest-cov = "*"
pytest-repeat = "*"
pytest-randomly = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
